# subtitulam-ai

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  app_ui.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai-subtitle-translator/: .gitignore  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py  job_logs.py  openai_client.py
app/models/: schemas.py
app/services/: context_service.py  embeddings_service.py  glossary_service.py  history_service.py  job_runner.py  ocr_service.py  rag_service.py  srt_service.py  translation_service.py
app/utils/: text_utils.py
data/: backfill_chromadb.py  test_sample_en.srt
data/baseline_run/: comparison.md  metrics.json  v1.5_baseline_es.srt
data/eval_runs/: 20260426T212236_baseline_v1.5.json  20260427T235021_wmt13_baseline.json  20260427T235157_full50_baseline.json  20260430T231527_opus100_baseline.json  20260430T231648_full50_subtitle_baseline.json  20260501T143723_v2.3_baseline_no_rag.json  20260501T143841_v2.3_with_rag.json  20260501T144448_v2.3_baseline_no_rag.json
data/showcase/: README.md  translate_showcase.py  v2.5_ablation_report.md
docker/: Dockerfile.backend  Dockerfile.frontend
eval/: __init__.py  __main__.py  cli.py  config.py  eval_against_human.py  exp_rag_descripciones.py  retranslate_offline.py  runner.py  showcase_diff.py
scripts/: actualizar.ps1  atender_actualizacion.ps1  backfill_qdrant.py  backup.ps1  instalar_tareas.ps1
tests/: test_batch_validation.py  test_clean_title.py  test_condensacion.py  test_cps.py  test_eval_align.py  test_glossary_block.py  test_job_queue.py  test_metrics.py  test_parsear_traducciones.py  test_segmentacion.py  test_text_utils.py  test_user_prompt.py
(+12 files in other folders)
