[project]
name = "ai-subtitle-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
    "srt>=3.5.3",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0.0",
    "sacrebleu>=2.6.0",
    "datasets>=4.8.5",
    "chromadb>=1.5.8",
]
